# MintSynth

./: .gitignore  README.md  meson.build
src/: decoding.cpp  device_check.cpp  main.cpp  meson.build  mint_module.hpp  mint_project.cpp  mint_project.hpp  mint_synth.cpp  mint_synth.hpp
src/core/: mint_module.cpp  mint_module.hpp  mint_project.cpp  mint_project.hpp  mint_synth.cpp  mint_synth.hpp  renderer.cpp  renderer.hpp
subprojects/: quill.wrap
